--- a/login.html
+++ b/login.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My App</title>
+    <title>Login</title>
   </head>
   <body>
-    <h1>This is My App!</h1>
-    Login form
+    login
   </body>
 </html>
